deepseek and bedrock are in good shape

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 aiofiles==23.2.1 ; python_version >= "3.10" and python_version < "4.0"
-aiohappyeyeballs==2.4.3 ; python_version >= "3.10" and python_version < "4.0"
-aiohttp==3.11.3 ; python_version >= "3.10" and python_version < "4.0"
-aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
+aiohappyeyeballs==2.4.4 ; python_version >= "3.10" and python_version < "4.0"
+aiohttp==3.11.11 ; python_version >= "3.10" and python_version < "4.0"
+aiosignal==1.3.2 ; python_version >= "3.10" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 anthropic==0.34.2 ; python_version >= "3.10" and python_version < "4.0"
-anyio==4.6.2.post1 ; python_version >= "3.10" and python_version < "4.0"
+anyio==4.7.0 ; python_version >= "3.10" and python_version < "4.0"
 astunparse==1.6.3 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.10" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.10" and python_version < "4.0"
 cachetools==5.5.0 ; python_version >= "3.10" and python_version < "4.0"
-certifi==2024.8.30 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2024.12.14 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.17.1 ; python_version >= "3.10" and python_version < "4.0"
-charset-normalizer==3.4.0 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
 click-default-group==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
-click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
+click==8.1.8 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
 contourpy==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==42.0.8 ; python_version >= "3.10" and python_version < "4.0"
@@ -28,19 +28,19 @@ dnspython==2.7.0 ; python_version >= "3.10" and python_version < "4.0"
 docstring-parser==0.16 ; python_version >= "3.10" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
 exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "4.0"
-faiss-cpu==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
-fastapi-cli==0.0.5 ; python_version >= "3.10" and python_version < "4.0"
+faiss-cpu==1.9.0.post1 ; python_version >= "3.10" and python_version < "4.0"
+fastapi-cli==0.0.7 ; python_version >= "3.10" and python_version < "4.0"
 fastapi==0.111.1 ; python_version >= "3.10" and python_version < "4.0"
 filelock==3.16.1 ; python_version >= "3.10" and python_version < "4.0"
-fonttools==4.55.0 ; python_version >= "3.10" and python_version < "4.0"
+fonttools==4.55.3 ; python_version >= "3.10" and python_version < "4.0"
 frozendict==2.4.6 ; python_version >= "3.10" and python_version < "4.0"
 frozenlist==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
-fsspec==2024.10.0 ; python_version >= "3.10" and python_version < "4.0"
+fsspec==2024.12.0 ; python_version >= "3.10" and python_version < "4.0"
 google-auth-oauthlib==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
-google-auth==2.36.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth==2.37.0 ; python_version >= "3.10" and python_version < "4.0"
 googlesearch-python==1.2.5 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
-grpcio==1.68.0 ; python_version >= "3.10" and python_version < "4.0"
+grpcio==1.68.1 ; python_version >= "3.10" and python_version < "4.0"
 gspread-dataframe==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
 gspread==6.1.4 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -50,25 +50,25 @@ httptools==0.6.4 ; python_version >= "3.10" and python_version < "4.0"
 httpx==0.25.2 ; python_version >= "3.10" and python_version < "4.0"
 huggingface-hub==0.23.5 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
-jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
-jiter==0.7.1 ; python_version >= "3.10" and python_version < "4.0"
+jinja2==3.1.5 ; python_version >= "3.10" and python_version < "4.0"
+jiter==0.8.2 ; python_version >= "3.10" and python_version < "4.0"
 joblib==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
 jsonpickle==3.4.2 ; python_version >= "3.10" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
-kiwisolver==1.4.7 ; python_version >= "3.10" and python_version < "4.0"
+kiwisolver==1.4.8 ; python_version >= "3.10" and python_version < "4.0"
 langchain-community==0.2.19 ; python_version >= "3.10" and python_version < "4.0"
 langchain-core==0.2.43 ; python_version >= "3.10" and python_version < "4.0"
 langchain-huggingface==0.0.3 ; python_version >= "3.10" and python_version < "4.0"
 langchain-text-splitters==0.2.4 ; python_version >= "3.10" and python_version < "4.0"
 langchain==0.2.17 ; python_version >= "3.10" and python_version < "4.0"
-langsmith==0.1.143 ; python_version >= "3.10" and python_version < "4.0"
+langsmith==0.1.147 ; python_version >= "3.10" and python_version < "4.0"
 lxml==5.3.0 ; python_version >= "3.10" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 markdownify==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
-marshmallow==3.23.1 ; python_version >= "3.10" and python_version < "4.0"
-matplotlib==3.9.2 ; python_version >= "3.10" and python_version < "4.0"
+marshmallow==3.23.3 ; python_version >= "3.10" and python_version < "4.0"
+matplotlib==3.10.0 ; python_version >= "3.10" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 multidict==6.1.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -90,32 +90,32 @@ nvidia-nccl-cu12==2.21.5 ; platform_system == "Linux" and platform_machine == "x
 nvidia-nvjitlink-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-nvtx-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
-openai==1.54.4 ; python_version >= "3.10" and python_version < "4.0"
-orjson==3.10.11 ; python_version >= "3.10" and python_version < "4.0"
+openai==1.59.2 ; python_version >= "3.10" and python_version < "4.0"
+orjson==3.10.13 ; python_version >= "3.10" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
 pandas==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
 pdfminer-six==20231228 ; python_version >= "3.10" and python_version < "4.0"
-pdfplumber==0.11.4 ; python_version >= "3.10" and python_version < "4.0"
+pdfplumber==0.11.5 ; python_version >= "3.10" and python_version < "4.0"
 peewee==3.17.8 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.4.0 ; python_version >= "3.10" and python_version < "4.0"
 platformdirs==4.3.6 ; python_version >= "3.10" and python_version < "4.0"
 playwright==1.46.0 ; python_version >= "3.10" and python_version < "4.0"
 prompt-toolkit==3.0.48 ; python_version >= "3.10" and python_version < "4.0"
-propcache==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
+propcache==0.2.1 ; python_version >= "3.10" and python_version < "4.0"
 proto-plus==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
-protobuf==5.28.3 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==5.29.2 ; python_version >= "3.10" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1-modules==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0"
-pydantic-core==2.23.4 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==2.9.2 ; python_version >= "3.10" and python_version < "4.0"
+pydantic-core==2.27.2 ; python_version >= "3.10" and python_version < "4.0"
+pydantic==2.10.4 ; python_version >= "3.10" and python_version < "4.0"
 pyee==11.1.0 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.10" and python_version < "4.0"
-pyparsing==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
+pyparsing==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
 pypdf==4.3.1 ; python_version >= "3.10" and python_version < "4.0"
-pypdfium2==4.30.0 ; python_version >= "3.10" and python_version < "4.0"
+pypdfium2==4.30.1 ; python_version >= "3.10" and python_version < "4.0"
 pyperclip==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
 pytesseract==0.3.13 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
@@ -127,17 +127,18 @@ regex==2024.11.6 ; python_version >= "3.10" and python_version < "4.0"
 requests-oauthlib==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 requests-toolbelt==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
+rich-toolkit==0.12.0 ; python_version >= "3.10" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 safetensors==0.4.5 ; python_version >= "3.10" and python_version < "4.0"
-scikit-learn==1.5.2 ; python_version >= "3.10" and python_version < "4.0"
-scipy==1.14.1 ; python_version >= "3.10" and python_version < "4.0"
+scikit-learn==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
+scipy==1.15.0 ; python_version >= "3.10" and python_version < "4.0"
 sec-api==1.0.25 ; python_version >= "3.10" and python_version < "4.0"
 sentence-transformers==3.3.1 ; python_version >= "3.10" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==75.5.0 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==75.6.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 soupsieve==2.6 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.36 ; python_version >= "3.10" and python_version < "4.0"
@@ -148,22 +149,22 @@ threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
 tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 tokenizers==0.19.1 ; python_version >= "3.10" and python_version < "4.0"
 torch==2.5.1 ; python_version >= "3.10" and python_version < "4.0"
-tqdm==4.67.0 ; python_version >= "3.10" and python_version < "4.0"
+tqdm==4.67.1 ; python_version >= "3.10" and python_version < "4.0"
 transformers==4.44.2 ; python_version >= "3.10" and python_version < "4.0"
 triton==3.1.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.13" and python_version >= "3.10"
-typer==0.13.1 ; python_version >= "3.10" and python_version < "4.0"
+typer==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0"
 tzlocal==5.2 ; python_version >= "3.10" and python_version < "4.0"
-urllib3==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn==0.30.6 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn[standard]==0.30.6 ; python_version >= "3.10" and python_version < "4.0"
 uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.10" and python_version < "4.0"
-watchfiles==0.24.0 ; python_version >= "3.10" and python_version < "4.0"
+watchfiles==1.0.3 ; python_version >= "3.10" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
 websockets==14.1 ; python_version >= "3.10" and python_version < "4.0"
 wheel==0.43.0 ; python_version >= "3.10" and python_version < "4.0"
-yarl==1.17.2 ; python_version >= "3.10" and python_version < "4.0"
-yfinance==0.2.49 ; python_version >= "3.10" and python_version < "4.0"
+yarl==1.18.3 ; python_version >= "3.10" and python_version < "4.0"
+yfinance==0.2.51 ; python_version >= "3.10" and python_version < "4.0"
