--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -37,6 +37,9 @@ helper_functions:
   - llmvm.server.tools.market.MarketHelpers.get_stock_volatility
   - llmvm.server.tools.market.MarketHelpers.get_stock_price_history
   - llmvm.server.tools.market.MarketHelpers.get_stock_analysis
+  - llmvm.server.tools.work_downloader.WorkDownloader.work_google_doc_to_markdown
+  - llmvm.server.tools.work_downloader.WorkDownloader.work_url_download
+  - llmvm.server.tools.work_downloader.WorkDownloader.get_chrome_tabs
   - llmvm.server.bcl.BCL.sample_normal
   - llmvm.server.bcl.BCL.sample_binomial
   - llmvm.server.bcl.BCL.sample_lognormal
