--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,12 +131,13 @@ wheel = "^0.43.0"
 yarl = "^1.9.4"
 yfinance = "^0.2.40"
 pydantic = "^2.7.4"
-httpx = "0.25.2"
+httpx = "^0.28.1"
 langchain-huggingface = "^0.0.3"
 matplotlib = "^3.9.0"
 dateparser = "^1.2.0"
 gspread = "^6.1.3"
 gspread-dataframe = "^4.0.0"
+mcp = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -146,3 +147,18 @@ build-backend = "poetry.core.masonry.api"
 select = [
   "F",
 ]
+
+[project]
+name = "llmvm-cli"
+version = "0.9.7"
+requires-python = ">=3.10"
+description = "Command Line LLM with client-side tools support."
+authors = [
+  { name = "9600 devs <contact@9600.dev>", email = "contact@9600.dev" }
+]
+readme = "README.md"
+packages = [ {include = "llmvm"} ]
+include = ["llmvm/client/awesome_prompts.csv", "llmvm/model_prices_and_context_window.json", "llmvm/server/prompts/**/*", "llmvm/config.yaml"]
+
+
+
