--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ aiohappyeyeballs==2.4.4 ; python_version >= "3.10" and python_version < "4.0"
 aiohttp==3.11.11 ; python_version >= "3.10" and python_version < "4.0"
 aiosignal==1.3.2 ; python_version >= "3.10" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-anthropic==0.34.2 ; python_version >= "3.10" and python_version < "4.0"
-anyio==4.7.0 ; python_version >= "3.10" and python_version < "4.0"
+anthropic==0.43.1 ; python_version >= "3.10" and python_version < "4.0"
+anyio==4.8.0 ; python_version >= "3.10" and python_version < "4.0"
 astunparse==1.6.3 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -37,13 +37,14 @@ google-auth-oauthlib==1.2.1 ; python_version >= "3.10" and python_version < "4.0
 google-auth==2.37.0 ; python_version >= "3.10" and python_version < "4.0"
 googlesearch-python==1.2.5 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
-grpcio==1.68.1 ; python_version >= "3.10" and python_version < "4.0"
+grpcio==1.69.0 ; python_version >= "3.10" and python_version < "4.0"
 gspread-dataframe==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
 gspread==6.1.4 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.10" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.10" and python_version < "4.0"
-httpx==0.25.2 ; python_version >= "3.10" and python_version < "4.0"
+httpx-sse==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
+httpx==0.28.1 ; python_version >= "3.10" and python_version < "4.0"
 huggingface-hub==0.23.5 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.5 ; python_version >= "3.10" and python_version < "4.0"
@@ -63,8 +64,9 @@ lxml==5.3.0 ; python_version >= "3.10" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 markdownify==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
-marshmallow==3.23.3 ; python_version >= "3.10" and python_version < "4.0"
+marshmallow==3.25.1 ; python_version >= "3.10" and python_version < "4.0"
 matplotlib==3.10.0 ; python_version >= "3.10" and python_version < "4.0"
+mcp[cli]==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 multidict==6.1.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -86,8 +88,8 @@ nvidia-nccl-cu12==2.21.5 ; platform_system == "Linux" and platform_machine == "x
 nvidia-nvjitlink-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-nvtx-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
-openai==1.59.3 ; python_version >= "3.10" and python_version < "4.0"
-orjson==3.10.13 ; python_version >= "3.10" and python_version < "4.0"
+openai==1.59.8 ; python_version >= "3.10" and python_version < "4.0"
+orjson==3.10.14 ; python_version >= "3.10" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
 pandas==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -100,21 +102,23 @@ playwright==1.46.0 ; python_version >= "3.10" and python_version < "4.0"
 prompt-toolkit==3.0.48 ; python_version >= "3.10" and python_version < "4.0"
 propcache==0.2.1 ; python_version >= "3.10" and python_version < "4.0"
 proto-plus==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
-protobuf==5.29.2 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==5.29.3 ; python_version >= "3.10" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1-modules==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.27.2 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==2.10.4 ; python_version >= "3.10" and python_version < "4.0"
+pydantic-settings==2.7.1 ; python_version >= "3.10" and python_version < "4.0"
+pydantic==2.10.5 ; python_version >= "3.10" and python_version < "4.0"
 pyee==11.1.0 ; python_version >= "3.10" and python_version < "4.0"
-pygments==2.18.0 ; python_version >= "3.10" and python_version < "4.0"
+pygments==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
 pyparsing==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
 pypdf==4.3.1 ; python_version >= "3.10" and python_version < "4.0"
 pypdfium2==4.30.1 ; python_version >= "3.10" and python_version < "4.0"
 pyperclip==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
 pytesseract==0.3.13 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.20 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.2 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
@@ -125,16 +129,18 @@ requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 safetensors==0.4.5 ; python_version >= "3.10" and python_version < "4.0"
-scikit-learn==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
-scipy==1.15.0 ; python_version >= "3.10" and python_version < "4.0"
+scikit-learn==1.6.1 ; python_version >= "3.10" and python_version < "4.0"
+scipy==1.15.1 ; python_version >= "3.10" and python_version < "4.0"
 sec-api==1.0.25 ; python_version >= "3.10" and python_version < "4.0"
 sentence-transformers==3.3.1 ; python_version >= "3.10" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==75.6.0 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==75.8.0 ; python_version >= "3.12" and python_version < "4.0"
+shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 soupsieve==2.6 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.36 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.37 ; python_version >= "3.10" and python_version < "4.0"
+sse-starlette==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
 tenacity==8.5.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -145,6 +151,7 @@ torch==2.5.1 ; python_version >= "3.10" and python_version < "4.0"
 tqdm==4.67.1 ; python_version >= "3.10" and python_version < "4.0"
 transformers==4.44.2 ; python_version >= "3.10" and python_version < "4.0"
 triton==3.1.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.13" and python_version >= "3.10"
+typer==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0"
