--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -19,7 +19,7 @@ deepseek_api_base: 'https://api.deepseek.com/v1'
 gemini_api_base: 'https://generativelanguage.googleapis.com/v1beta'
 bedrock_api_base: 'us-east-1'
 default_openai_model: 'gpt-4o'
-default_anthropic_model: 'claude-3-5-sonnet-latest'
+default_anthropic_model: 'claude-3-7-sonnet-20250219'
 default_gemini_model: 'gemini-2.0-flash-exp'
 default_deepseek_model: 'deepseek-chat'
 default_bedrock_model: 'amazon.nova-pro-v1:0'
@@ -60,4 +60,4 @@ helper_functions:
 # optional client color Python rich syntax
 client_stream_token_color: 'bright_black'
 client_role_color: 'bold cyan'
-
+client_repl_color: 'ansibrightcyan'
