--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 aiofiles==23.2.1 ; python_version >= "3.10" and python_version < "4.0"
-aiohappyeyeballs==2.4.4 ; python_version >= "3.10" and python_version < "4.0"
-aiohttp==3.11.11 ; python_version >= "3.10" and python_version < "4.0"
+aiohappyeyeballs==2.4.8 ; python_version >= "3.10" and python_version < "4.0"
+aiohttp==3.11.13 ; python_version >= "3.10" and python_version < "4.0"
 aiosignal==1.3.2 ; python_version >= "3.10" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-anthropic==0.43.1 ; python_version >= "3.10" and python_version < "4.0"
+anthropic==0.49.0 ; python_version >= "3.10" and python_version < "4.0"
 anyio==4.8.0 ; python_version >= "3.10" and python_version < "4.0"
 astunparse==1.6.3 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
-beautifulsoup4==4.12.3 ; python_version >= "3.10" and python_version < "4.0"
+beautifulsoup4==4.13.3 ; python_version >= "3.10" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.10" and python_version < "4.0"
-cachetools==5.5.0 ; python_version >= "3.10" and python_version < "4.0"
+cachetools==5.5.2 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.12.14 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.17.1 ; python_version >= "3.10" and python_version < "4.0"
 charset-normalizer==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -18,28 +18,28 @@ click-default-group==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.8 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
 contourpy==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
-cryptography==44.0.0 ; python_version >= "3.10" and python_version < "4.0"
+cryptography==44.0.2 ; python_version >= "3.10" and python_version < "4.0"
 cycler==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 dataclasses-json==0.6.7 ; python_version >= "3.10" and python_version < "4.0"
-dateparser==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
+dateparser==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
 dill==0.3.9 ; python_version >= "3.10" and python_version < "4.0"
 distro==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
 docstring-parser==0.16 ; python_version >= "3.10" and python_version < "4.0"
 exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "4.0"
-faiss-cpu==1.9.0.post1 ; python_version >= "3.10" and python_version < "4.0"
-fastapi==0.115.6 ; python_version >= "3.10" and python_version < "4.0"
-filelock==3.16.1 ; python_version >= "3.10" and python_version < "4.0"
-fonttools==4.55.3 ; python_version >= "3.10" and python_version < "4.0"
+faiss-cpu==1.10.0 ; python_version >= "3.10" and python_version < "4.0"
+fastapi==0.115.11 ; python_version >= "3.10" and python_version < "4.0"
+filelock==3.17.0 ; python_version >= "3.10" and python_version < "4.0"
+fonttools==4.56.0 ; python_version >= "3.10" and python_version < "4.0"
 frozendict==2.4.6 ; python_version >= "3.10" and python_version < "4.0"
 frozenlist==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
 fsspec==2024.12.0 ; python_version >= "3.10" and python_version < "4.0"
 google-auth-oauthlib==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
-google-auth==2.37.0 ; python_version >= "3.10" and python_version < "4.0"
-googlesearch-python==1.2.5 ; python_version >= "3.10" and python_version < "4.0"
-greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
-grpcio==1.69.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth==2.38.0 ; python_version >= "3.10" and python_version < "4.0"
+googlesearch-python==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+greenlet==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
+grpcio==1.70.0 ; python_version >= "3.10" and python_version < "4.0"
 gspread-dataframe==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
-gspread==6.1.4 ; python_version >= "3.10" and python_version < "4.0"
+gspread==6.2.0 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.10" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.10" and python_version < "4.0"
@@ -60,13 +60,13 @@ langchain-huggingface==0.0.3 ; python_version >= "3.10" and python_version < "4.
 langchain-text-splitters==0.2.4 ; python_version >= "3.10" and python_version < "4.0"
 langchain==0.2.17 ; python_version >= "3.10" and python_version < "4.0"
 langsmith==0.1.147 ; python_version >= "3.10" and python_version < "4.0"
-lxml==5.3.0 ; python_version >= "3.10" and python_version < "4.0"
+lxml==5.3.1 ; python_version >= "3.10" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 markdownify==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
-marshmallow==3.25.1 ; python_version >= "3.10" and python_version < "4.0"
-matplotlib==3.10.0 ; python_version >= "3.10" and python_version < "4.0"
-mcp[cli]==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
+marshmallow==3.26.1 ; python_version >= "3.10" and python_version < "4.0"
+matplotlib==3.10.1 ; python_version >= "3.10" and python_version < "4.0"
+mcp[cli]==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 multidict==6.1.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -84,33 +84,34 @@ nvidia-cufft-cu12==11.2.1.3 ; platform_system == "Linux" and platform_machine ==
 nvidia-curand-cu12==10.3.5.147 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-cusolver-cu12==11.6.1.9 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-cusparse-cu12==12.3.1.170 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cusparselt-cu12==0.6.2 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-nccl-cu12==2.21.5 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-nvjitlink-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-nvtx-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
-openai==1.59.8 ; python_version >= "3.10" and python_version < "4.0"
-orjson==3.10.14 ; python_version >= "3.10" and python_version < "4.0"
+openai==1.65.2 ; python_version >= "3.10" and python_version < "4.0"
+orjson==3.10.15 ; python_version >= "3.10" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
 pandas==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
 pdfminer-six==20231228 ; python_version >= "3.10" and python_version < "4.0"
 pdfplumber==0.11.5 ; python_version >= "3.10" and python_version < "4.0"
-peewee==3.17.8 ; python_version >= "3.10" and python_version < "4.0"
+peewee==3.17.9 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.4.0 ; python_version >= "3.10" and python_version < "4.0"
 platformdirs==4.3.6 ; python_version >= "3.10" and python_version < "4.0"
-playwright==1.46.0 ; python_version >= "3.10" and python_version < "4.0"
-prompt-toolkit==3.0.48 ; python_version >= "3.10" and python_version < "4.0"
-propcache==0.2.1 ; python_version >= "3.10" and python_version < "4.0"
-proto-plus==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
+playwright==1.50.0 ; python_version >= "3.10" and python_version < "4.0"
+prompt-toolkit==3.0.50 ; python_version >= "3.10" and python_version < "4.0"
+propcache==0.3.0 ; python_version >= "3.10" and python_version < "4.0"
+proto-plus==1.26.0 ; python_version >= "3.10" and python_version < "4.0"
 protobuf==5.29.3 ; python_version >= "3.10" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1-modules==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.27.2 ; python_version >= "3.10" and python_version < "4.0"
-pydantic-settings==2.7.1 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==2.10.5 ; python_version >= "3.10" and python_version < "4.0"
-pyee==11.1.0 ; python_version >= "3.10" and python_version < "4.0"
+pydantic-settings==2.8.1 ; python_version >= "3.10" and python_version < "4.0"
+pydantic==2.10.6 ; python_version >= "3.10" and python_version < "4.0"
+pyee==12.1.1 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
 pyparsing==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
 pypdf==4.3.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -130,16 +131,16 @@ rich==13.9.4 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 safetensors==0.4.5 ; python_version >= "3.10" and python_version < "4.0"
 scikit-learn==1.6.1 ; python_version >= "3.10" and python_version < "4.0"
-scipy==1.15.1 ; python_version >= "3.10" and python_version < "4.0"
-sec-api==1.0.25 ; python_version >= "3.10" and python_version < "4.0"
-sentence-transformers==3.3.1 ; python_version >= "3.10" and python_version < "4.0"
+scipy==1.15.2 ; python_version >= "3.10" and python_version < "4.0"
+sec-api==1.0.29 ; python_version >= "3.10" and python_version < "4.0"
+sentence-transformers==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==75.8.0 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==75.8.2 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 soupsieve==2.6 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.37 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.38 ; python_version >= "3.10" and python_version < "4.0"
 sse-starlette==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -147,19 +148,19 @@ tenacity==8.5.0 ; python_version >= "3.10" and python_version < "4.0"
 threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
 tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 tokenizers==0.19.1 ; python_version >= "3.10" and python_version < "4.0"
-torch==2.5.1 ; python_version >= "3.10" and python_version < "4.0"
+torch==2.6.0 ; python_version >= "3.10" and python_version < "4.0"
 tqdm==4.67.1 ; python_version >= "3.10" and python_version < "4.0"
 transformers==4.44.2 ; python_version >= "3.10" and python_version < "4.0"
-triton==3.1.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.13" and python_version >= "3.10"
-typer==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
+triton==3.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+typer==0.15.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0"
-tzlocal==5.2 ; python_version >= "3.10" and python_version < "4.0"
+tzlocal==5.3 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn==0.30.6 ; python_version >= "3.10" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
 wheel==0.43.0 ; python_version >= "3.10" and python_version < "4.0"
 yarl==1.18.3 ; python_version >= "3.10" and python_version < "4.0"
-yfinance==0.2.51 ; python_version >= "3.10" and python_version < "4.0"
+yfinance==0.2.54 ; python_version >= "3.10" and python_version < "4.0"
