pre functioncallmeta refactor

--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -54,6 +54,7 @@ helper_functions:
   - llmvm.server.bcl.BCL.get_tvshow_ratings_and_details
   - llmvm.server.bcl.BCL.search_and_replace
   - llmvm.server.bcl.BCL.read_file
+  - llmvm.server.bcl.BCL.find
   - llmvm.server.tools.browser.Browser
   - llmvm.server.tools.macos_chrome_browser.MacOSChromeBrowser
 
