new helpers: memory, file read/write in scratch dir, fixes, things work better

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ node_modules/
 /playwright/.cache/
 token_tests/
 scripts/dutton
+scripts/albernese
 scripts/output
 tests/comparisons
 tests/output
