--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -58,6 +58,11 @@ helper_functions:
   - llmvm.server.bcl.BCL.find
   - llmvm.server.tools.browser.Browser
   - llmvm.server.tools.macos_chrome_browser.MacOSChromeBrowser
+  - llmvm.server.tools.search_tool.Search.google_search
+  - llmvm.server.tools.search_tool.Search.google_patent_search
+  - llmvm.server.tools.search_tool.Search.bluesky_search
+  - llmvm.server.tools.search_tool.Search.yelp_search
+  - llmvm.server.tools.search_tool.Search.hackernews_search
 
 # optional client color Python rich syntax
 client_stream_token_color: 'bright_black'
