--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmvm-cli"
-version = "1.1.5"
+version = "1.1.6"
 description = "Command Line LLM with client-side tools support."
 authors = ["9600 devs <contact@9600.dev>"]
 readme = "README.md"
@@ -138,6 +138,9 @@ dateparser = "^1.2.0"
 gspread = "^6.1.3"
 gspread-dataframe = "^4.0.0"
 mcp = {extras = ["cli"], version = "^1.3.0"}
+boto3 = "^1.37.28"
+botocore = "^1.37.28"
+numpy-financial = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
