--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ astunparse==1.6.3 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
 beautifulsoup4==4.13.3 ; python_version >= "3.10" and python_version < "4.0"
+boto3==1.37.28 ; python_version >= "3.10" and python_version < "4.0"
+botocore==1.37.28 ; python_version >= "3.10" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.10" and python_version < "4.0"
 cachetools==5.5.2 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.12.14 ; python_version >= "3.10" and python_version < "4.0"
@@ -49,6 +51,7 @@ huggingface-hub==0.29.1 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.6 ; python_version >= "3.10" and python_version < "4.0"
 jiter==0.8.2 ; python_version >= "3.10" and python_version < "4.0"
+jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 joblib==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
 jsonpickle==3.4.2 ; python_version >= "3.10" and python_version < "4.0"
@@ -74,6 +77,7 @@ multitasking==0.0.11 ; python_version >= "3.10" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 nest-asyncio==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
 networkx==3.4.2 ; python_version >= "3.10" and python_version < "4.0"
+numpy-financial==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.10" and python_version < "4.0"
 nvidia-cublas-cu12==12.4.5.8 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-cuda-cupti-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
@@ -129,6 +133,7 @@ requests-toolbelt==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
+s3transfer==0.11.4 ; python_version >= "3.10" and python_version < "4.0"
 safetensors==0.4.5 ; python_version >= "3.10" and python_version < "4.0"
 scikit-learn==1.6.1 ; python_version >= "3.10" and python_version < "4.0"
 scipy==1.15.2 ; python_version >= "3.10" and python_version < "4.0"
