--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 aiofiles==23.2.1 ; python_version >= "3.10" and python_version < "4.0"
-aiohappyeyeballs==2.4.8 ; python_version >= "3.10" and python_version < "4.0"
-aiohttp==3.11.14 ; python_version >= "3.10" and python_version < "4.0"
+aiohappyeyeballs==2.6.1 ; python_version >= "3.10" and python_version < "4.0"
+aiohttp==3.11.16 ; python_version >= "3.10" and python_version < "4.0"
 aiosignal==1.3.2 ; python_version >= "3.10" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 anthropic==0.49.0 ; python_version >= "3.10" and python_version < "4.0"
-anyio==4.8.0 ; python_version >= "3.10" and python_version < "4.0"
+anyio==4.9.0 ; python_version >= "3.10" and python_version < "4.0"
 astunparse==1.6.3 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
-beautifulsoup4==4.13.3 ; python_version >= "3.10" and python_version < "4.0"
-boto3==1.37.28 ; python_version >= "3.10" and python_version < "4.0"
-botocore==1.37.28 ; python_version >= "3.10" and python_version < "4.0"
+beautifulsoup4==4.13.4 ; python_version >= "3.10" and python_version < "4.0"
+boto3==1.37.36 ; python_version >= "3.10" and python_version < "4.0"
+botocore==1.37.36 ; python_version >= "3.10" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.10" and python_version < "4.0"
 cachetools==5.5.2 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.12.14 ; python_version >= "3.10" and python_version < "4.0"
@@ -19,7 +19,7 @@ charset-normalizer==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
 click-default-group==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.8 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
-contourpy==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
+contourpy==1.3.2 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==44.0.2 ; python_version >= "3.10" and python_version < "4.0"
 cycler==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 dataclasses-json==0.6.7 ; python_version >= "3.10" and python_version < "4.0"
@@ -29,28 +29,28 @@ distro==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
 docstring-parser==0.16 ; python_version >= "3.10" and python_version < "4.0"
 exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "4.0"
 faiss-cpu==1.10.0 ; python_version >= "3.10" and python_version < "4.0"
-fastapi==0.115.11 ; python_version >= "3.10" and python_version < "4.0"
-filelock==3.17.0 ; python_version >= "3.10" and python_version < "4.0"
-fonttools==4.56.0 ; python_version >= "3.10" and python_version < "4.0"
+fastapi==0.115.12 ; python_version >= "3.10" and python_version < "4.0"
+filelock==3.18.0 ; python_version >= "3.10" and python_version < "4.0"
+fonttools==4.57.0 ; python_version >= "3.10" and python_version < "4.0"
 frozendict==2.4.6 ; python_version >= "3.10" and python_version < "4.0"
-frozenlist==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
+frozenlist==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
 fsspec==2024.12.0 ; python_version >= "3.10" and python_version < "4.0"
 google-auth-oauthlib==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
-google-auth==2.38.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth==2.39.0 ; python_version >= "3.10" and python_version < "4.0"
 googlesearch-python==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-greenlet==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
-grpcio==1.70.0 ; python_version >= "3.10" and python_version < "4.0"
+greenlet==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
+grpcio==1.71.0 ; python_version >= "3.10" and python_version < "4.0"
 gspread-dataframe==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
 gspread==6.2.0 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.10" and python_version < "4.0"
-httpcore==1.0.7 ; python_version >= "3.10" and python_version < "4.0"
+httpcore==1.0.8 ; python_version >= "3.10" and python_version < "4.0"
 httpx-sse==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.10" and python_version < "4.0"
-huggingface-hub==0.29.1 ; python_version >= "3.10" and python_version < "4.0"
+huggingface-hub==0.29.3 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.6 ; python_version >= "3.10" and python_version < "4.0"
-jiter==0.8.2 ; python_version >= "3.10" and python_version < "4.0"
+jiter==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 joblib==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
@@ -63,16 +63,16 @@ langchain-huggingface==0.0.3 ; python_version >= "3.10" and python_version < "4.
 langchain-text-splitters==0.2.4 ; python_version >= "3.10" and python_version < "4.0"
 langchain==0.2.17 ; python_version >= "3.10" and python_version < "4.0"
 langsmith==0.1.147 ; python_version >= "3.10" and python_version < "4.0"
-lxml==5.3.1 ; python_version >= "3.10" and python_version < "4.0"
+lxml==5.3.2 ; python_version >= "3.10" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 markdownify==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
 marshmallow==3.26.1 ; python_version >= "3.10" and python_version < "4.0"
 matplotlib==3.10.1 ; python_version >= "3.10" and python_version < "4.0"
-mcp[cli]==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+mcp[cli]==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-multidict==6.1.0 ; python_version >= "3.10" and python_version < "4.0"
+multidict==6.4.3 ; python_version >= "3.10" and python_version < "4.0"
 multitasking==0.0.11 ; python_version >= "3.10" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 nest-asyncio==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -93,8 +93,8 @@ nvidia-nccl-cu12==2.21.5 ; platform_system == "Linux" and platform_machine == "x
 nvidia-nvjitlink-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-nvtx-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
-openai==1.65.2 ; python_version >= "3.10" and python_version < "4.0"
-orjson==3.10.15 ; python_version >= "3.10" and python_version < "4.0"
+openai==1.75.0 ; python_version >= "3.10" and python_version < "4.0"
+orjson==3.10.16 ; python_version >= "3.10" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
 pandas==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -102,28 +102,28 @@ pdfminer-six==20231228 ; python_version >= "3.10" and python_version < "4.0"
 pdfplumber==0.11.5 ; python_version >= "3.10" and python_version < "4.0"
 peewee==3.17.9 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.4.0 ; python_version >= "3.10" and python_version < "4.0"
-platformdirs==4.3.6 ; python_version >= "3.10" and python_version < "4.0"
-playwright==1.50.0 ; python_version >= "3.10" and python_version < "4.0"
-prompt-toolkit==3.0.50 ; python_version >= "3.10" and python_version < "4.0"
-propcache==0.3.0 ; python_version >= "3.10" and python_version < "4.0"
-proto-plus==1.26.0 ; python_version >= "3.10" and python_version < "4.0"
-protobuf==5.29.3 ; python_version >= "3.10" and python_version < "4.0"
+platformdirs==4.3.7 ; python_version >= "3.10" and python_version < "4.0"
+playwright==1.51.0 ; python_version >= "3.10" and python_version < "4.0"
+prompt-toolkit==3.0.51 ; python_version >= "3.10" and python_version < "4.0"
+propcache==0.3.1 ; python_version >= "3.10" and python_version < "4.0"
+proto-plus==1.26.1 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==6.30.2 ; python_version >= "3.10" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.10" and python_version < "4.0"
-pyasn1-modules==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1-modules==0.4.2 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0"
-pydantic-core==2.27.2 ; python_version >= "3.10" and python_version < "4.0"
+pydantic-core==2.33.1 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-settings==2.8.1 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==2.10.6 ; python_version >= "3.10" and python_version < "4.0"
+pydantic==2.11.3 ; python_version >= "3.10" and python_version < "4.0"
 pyee==12.1.1 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
-pyparsing==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
+pyparsing==3.2.3 ; python_version >= "3.10" and python_version < "4.0"
 pypdf==4.3.1 ; python_version >= "3.10" and python_version < "4.0"
 pypdfium2==4.30.1 ; python_version >= "3.10" and python_version < "4.0"
 pyperclip==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
 pytesseract==0.3.13 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
-python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.20 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.2 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
@@ -132,40 +132,41 @@ requests-oauthlib==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 requests-toolbelt==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.10" and python_version < "4.0"
-rsa==4.9 ; python_version >= "3.10" and python_version < "4"
-s3transfer==0.11.4 ; python_version >= "3.10" and python_version < "4.0"
+rsa==4.9.1 ; python_version >= "3.10" and python_version < "4"
+s3transfer==0.11.5 ; python_version >= "3.10" and python_version < "4.0"
 safetensors==0.4.5 ; python_version >= "3.10" and python_version < "4.0"
 scikit-learn==1.6.1 ; python_version >= "3.10" and python_version < "4.0"
 scipy==1.15.2 ; python_version >= "3.10" and python_version < "4.0"
-sec-api==1.0.29 ; python_version >= "3.10" and python_version < "4.0"
+sec-api==1.0.31 ; python_version >= "3.10" and python_version < "4.0"
 sentence-transformers==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==75.8.2 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==78.1.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 soupsieve==2.6 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.38 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.40 ; python_version >= "3.10" and python_version < "4.0"
 sse-starlette==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
 tenacity==8.5.0 ; python_version >= "3.10" and python_version < "4.0"
-threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
+threadpoolctl==3.6.0 ; python_version >= "3.10" and python_version < "4.0"
 tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-tokenizers==0.21.0 ; python_version >= "3.10" and python_version < "4.0"
+tokenizers==0.21.1 ; python_version >= "3.10" and python_version < "4.0"
 torch==2.6.0 ; python_version >= "3.10" and python_version < "4.0"
 tqdm==4.67.1 ; python_version >= "3.10" and python_version < "4.0"
-transformers==4.49.0 ; python_version >= "3.10" and python_version < "4.0"
+transformers==4.50.3 ; python_version >= "3.10" and python_version < "4.0"
 triton==3.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 typer==0.15.2 ; python_version >= "3.10" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.13.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
+typing-inspection==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0"
-tzlocal==5.3 ; python_version >= "3.10" and python_version < "4.0"
-urllib3==2.3.0 ; python_version >= "3.10" and python_version < "4.0"
+tzlocal==5.3.1 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.4.0 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn==0.30.6 ; python_version >= "3.10" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
 wheel==0.43.0 ; python_version >= "3.10" and python_version < "4.0"
-yarl==1.18.3 ; python_version >= "3.10" and python_version < "4.0"
-yfinance==0.2.54 ; python_version >= "3.10" and python_version < "4.0"
+yarl==1.20.0 ; python_version >= "3.10" and python_version < "4.0"
+yfinance==0.2.55 ; python_version >= "3.10" and python_version < "4.0"
