--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmvm-cli"
-version = "1.2.5"
+version = "1.2.6"
 description = "Command Line LLM with client-side tools support."
 authors = ["9600 devs <contact@9600.dev>"]
 readme = "README.md"
@@ -141,6 +141,8 @@ mcp = {extras = ["cli"], version = "^1.3.0"}
 boto3 = "^1.37.28"
 botocore = "^1.37.28"
 numpy-financial = "^1.0.0"
+pyte = "^0.8.2"
+markdown2 = "^2.5.3"
 
 [build-system]
 requires = ["poetry-core"]
