--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiofiles==23.2.1 ; python_version >= "3.10" and python_version < "4.0"
 aiohappyeyeballs==2.6.1 ; python_version >= "3.10" and python_version < "4.0"
-aiohttp==3.11.16 ; python_version >= "3.10" and python_version < "4.0"
+aiohttp==3.11.17 ; python_version >= "3.10" and python_version < "4.0"
 aiosignal==1.3.2 ; python_version >= "3.10" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 anthropic==0.49.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -9,8 +9,8 @@ astunparse==1.6.3 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
 beautifulsoup4==4.13.4 ; python_version >= "3.10" and python_version < "4.0"
-boto3==1.37.36 ; python_version >= "3.10" and python_version < "4.0"
-botocore==1.37.36 ; python_version >= "3.10" and python_version < "4.0"
+boto3==1.37.37 ; python_version >= "3.10" and python_version < "4.0"
+botocore==1.37.37 ; python_version >= "3.10" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.10" and python_version < "4.0"
 cachetools==5.5.2 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.12.14 ; python_version >= "3.10" and python_version < "4.0"
@@ -65,6 +65,7 @@ langchain==0.2.17 ; python_version >= "3.10" and python_version < "4.0"
 langsmith==0.1.147 ; python_version >= "3.10" and python_version < "4.0"
 lxml==5.3.2 ; python_version >= "3.10" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
+markdown2==2.5.3 ; python_version >= "3.10" and python_version < "4"
 markdownify==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
 marshmallow==3.26.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -113,7 +114,7 @@ pyasn1-modules==0.4.2 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.33.1 ; python_version >= "3.10" and python_version < "4.0"
-pydantic-settings==2.8.1 ; python_version >= "3.10" and python_version < "4.0"
+pydantic-settings==2.9.1 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.11.3 ; python_version >= "3.10" and python_version < "4.0"
 pyee==12.1.1 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -121,6 +122,7 @@ pyparsing==3.2.3 ; python_version >= "3.10" and python_version < "4.0"
 pypdf==4.3.1 ; python_version >= "3.10" and python_version < "4.0"
 pypdfium2==4.30.1 ; python_version >= "3.10" and python_version < "4.0"
 pyperclip==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
+pyte==0.8.2 ; python_version >= "3.10" and python_version < "4.0"
 pytesseract==0.3.13 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -140,7 +142,7 @@ scipy==1.15.2 ; python_version >= "3.10" and python_version < "4.0"
 sec-api==1.0.31 ; python_version >= "3.10" and python_version < "4.0"
 sentence-transformers==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==78.1.0 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==78.1.1 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
