--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -19,9 +19,9 @@ anthropic_api_base: 'https://api.anthropic.com'
 deepseek_api_base: 'https://api.deepseek.com/v1'
 gemini_api_base: 'https://generativelanguage.googleapis.com/v1beta'
 bedrock_api_base: 'us-east-1'
-default_openai_model: 'gpt-4o'
-default_anthropic_model: 'claude-3-7-sonnet-latest'
-default_gemini_model: 'gemini-2.5-pro-exp-03-25'
+default_openai_model: 'gpt-4.1'
+default_anthropic_model: 'claude-sonnet-4-20250514'
+default_gemini_model: 'gemini-2.5-pro-preview-05-06'
 default_deepseek_model: 'deepseek-chat'
 default_bedrock_model: 'amazon.nova-pro-v1:0'
 executor: 'anthropic'  # openai, anthropic, gemini, deepseek, bedrock
