--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ h11==0.16.0 ; python_version >= "3.11" and python_version < "4.0"
 hf-xet==1.1.5 ; python_version >= "3.11" and python_version < "4.0" and (platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "arm64" or platform_machine == "aarch64")
 html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.9 ; python_version >= "3.11" and python_version < "4.0"
+httpx-sse==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.11" and python_version < "4.0"
 huggingface-hub==0.33.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.11" and python_version < "4.0"
@@ -64,6 +65,7 @@ markdownify==0.12.1 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
 marshmallow==3.26.1 ; python_version >= "3.11" and python_version < "4.0"
 matplotlib==3.10.3 ; python_version >= "3.11" and python_version < "4.0"
+mcp==1.9.4 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 multidict==6.5.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -93,6 +95,7 @@ pyasn1-modules==0.4.2 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-core==2.33.2 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-settings==2.10.0 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.11.7 ; python_version >= "3.11" and python_version < "4.0"
 pyee==12.1.1 ; python_version >= "3.11" and python_version < "4.0"
 pygments==2.19.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -103,6 +106,7 @@ pyperclip==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
 pyte==0.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytesseract==0.3.13 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "4.0"
+python-dotenv==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
 python-multipart==0.0.20 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2024.2 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -121,6 +125,7 @@ six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.7 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.41 ; python_version >= "3.11" and python_version < "4.0"
+sse-starlette==2.3.6 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.11" and python_version < "4.0"
 sympy==1.14.0 ; python_version >= "3.11" and python_version < "4.0"
 tenacity==8.5.0 ; python_version >= "3.11" and python_version < "4.0"
